--- a/client/src/scss/components/_navigation.scss
+++ b/client/src/scss/components/_navigation.scss
@@ -184,6 +184,7 @@ div.user-dropdown--active {
         background: transparent;
         border: none;
         opacity: 1;
+        display: flex;
         span {
           display: none;
         }
